fix. Исправлены ошибки верстки и форматирования кода

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Портфолио",
+    "name": "РџРѕСЂС‚С„РѕР»РёРѕ",
     "icons": [
         {
             "src": "img/favicon-android-chrome-192x192.png",
